--- a/.config
+++ b/.config
@@ -33,7 +33,7 @@ CONFIG_HAVE_IRQ_WORK=y
 #
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
-CONFIG_CROSS_COMPILE="arm-linux-gnueabi-"
+CONFIG_CROSS_COMPILE="arm-linux-gnueabihf-"
 CONFIG_LOCALVERSION="-alok"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
